Fix flex item alignment some more

--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -66,6 +66,7 @@
 
 .nav__bar-flex-item-dropdown {
   min-height: 57px;
+  position: relative;
   width: 25%;
 }
 
